--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -1,11 +1,19 @@
 ja:
   activerecord:
     models:
-      book: 本  #g
+      book: 本 #g
 
     attributes:
       book:
-        author: 著者  #g
-        memo: メモ  #g
-        picture: 画像  #g
-        title: 題名  #g
+        author: 著者 #g
+        memo: メモ #g
+        picture: 画像 #g
+        title: 題名 #g
+
+  views:
+    pagination:
+      first: 最初のページ
+      last: 最後のページ
+      next: 次ページ
+      truncate: 切り捨て
+      previous: 前ページ
