--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -1,4 +1,12 @@
 ja:
+  title:
+    books: 本の一覧
+    new_books: 本の登録
+    edit_books: 本の内容更新
+
+  message:
+    confirm: 本当にいいですか？
+
   errors:
     prohibited: この書籍の保存を禁止する
     create: 本の登録が完了しました
@@ -11,15 +19,12 @@ ja:
 
     attributes:
       book:
-        books: 本の一覧
-        new_books: 本の登録
-        edit_books: 本の内容更新
         author: 著者 #g
         memo: 本の概要 #g
         picture: 画像 #g
         title: 題名 #g
 
-  buttom:
+  button:
     new: 新規作成
     edit: 更新
     back: 戻る
