Add: Japanese language support by I18n
I18nによる日本語化対応を追加

--- a/config/locales/translation_en.yml
+++ b/config/locales/translation_en.yml
@@ -1,11 +1,13 @@
 en:
+  logged_in_name: "Logged in as"
+
   activerecord:
     models:
-      book: Book  #g
+      book: Book #g
 
     attributes:
       book:
-        author: Author  #g
-        memo: Memo  #g
-        picture: Picture  #g
-        title: Title  #g
+        author: Author #g
+        memo: Memo #g
+        picture: Picture #g
+        title: Title #g
