--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -1,17 +1,18 @@
 ja:
   activerecord:
     models:
-      book: 本  #g
+      book: 本 #g
       user: ユーザ
 
     attributes:
       book:
-        author: 著者  #g
-        memo: メモ  #g
-        picture: 画像  #g
-        title: 題名  #g
+        author: 著者 #g
+        memo: メモ #g
+        picture: 画像 #g
+        title: 題名 #g
       user:
         name: 氏名
         postal_code: 郵便番号
         address: 住所
         self_introduction: 自己紹介文
+        avatar: アカウントの画像
