Add: Follow and Unfollow action
フォローする、フォローを外すアクションを追加

--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -22,4 +22,4 @@ ja:
     following: フォロー
     followed: フォローする
     unfollow: フォローから外す
-    view_my_profile: 自分のプロフィールを見る
+    view_my_profile: プロフィールを見る
