--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -4,6 +4,7 @@ ja:
       book: 本 #g
       user: ユーザ
       report: 日報
+      comment: コメント
 
     attributes:
       book:
@@ -20,4 +21,7 @@ ja:
       report:
         title: タイトル
         content: 内容
+        created_at: 作成日時
+      comment:
+        content: コメント
         created_at: 作成日時
