--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -23,5 +23,6 @@ ja:
         content: 内容
         created_at: 作成日時
       comment:
+        user: ユーザ
         content: コメント
         created_at: 作成日時
